--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-control" content="public">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Diogo Lewis Mesquita - Full stack engineer</title>
+  <title>Diogo Lewis Mesquita - Full stack engineer in Braga</title>
 
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
@@ -20,14 +20,14 @@
       </p>
       <p>
         I live in Braga (PT) and work as a Full Stack Engineer for
-        <a href="https://pt.primaverabss.com/en/" class="primavera" target="_blank">Primavera BSS</a>.
+        <a href="https://pt.primaverabss.com/en/" target="_blank">Primavera BSS</a>.
       </p>
       <p>
         I also work on multiple side projects which include
-        <a href="https://www.[todo].com/" target="_blank" class="whistly">[todo]</a>,
-        <a href="https://www.[todo].com/" target="_blank" class="jsonbox">[todo]</a>,
-        <a href="https://www.[todo].com/" target="_blank" class="talk">[todo]</a> &amp;
-        <a href="https://www.[todo].com/" target="_blank" class="looptap">[todo]</a>.
+        <a href="https://www.[todo].com/" target="_blank">[todo]</a>,
+        <a href="https://www.[todo].com/" target="_blank">[todo]</a>,
+        <a href="https://www.[todo].com/" target="_blank">[todo]</a> &amp;
+        <a href="https://www.[todo].com/" target="_blank">[todo]</a>.
       </p>
       <p>
         I have immense love for minimalistic designs and web technologies. I enjoy working with
