--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-control" content="public">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Diogo Lewis Mesquita - Full stack engineer in Braga</title>
+  <title>Diogo Lewis Mesquita - Full Stack Engineer in Braga</title>
 
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
