--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,8 @@
   <meta http-equiv="Cache-control" content="public">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="description"
+    content="Full Stack Engineer working for Primavera BSS and multiple side projects like Sites & Logos & Fitness para Totós.">
   <title>Diogo Lewis Mesquita - Full Stack Engineer in Braga</title>
 
   <link href="assets/css/style.css" rel="stylesheet">
@@ -15,19 +17,17 @@
   <div id="wrap">
     <div id="content" style="opacity: 1;">
       <p>
-        Hello, I'm <i>Diogo Lewis Mesquita</i> and I make
-        <a href="https://github.com/iamdlm?tab=repositories" target="_blank">web apps</a>.
+        Hello, I'm <i>Diogo Lewis Mesquita</i> and I make (mostly web)
+        <a href="https://github.com/iamdlm?tab=repositories" target="_blank"> apps</a>.
       </p>
       <p>
-        I live in Braga (PT) and work as a Full Stack Engineer for
+        I live in Braga 🇵🇹 and work as a Full Stack Engineer for
         <a href="https://pt.primaverabss.com/en/" target="_blank">Primavera BSS</a>.
       </p>
       <p>
         I also work on multiple side projects which include
-        <a href="https://www.[todo].com/" target="_blank">[todo]</a>,
-        <a href="https://www.[todo].com/" target="_blank">[todo]</a>,
-        <a href="https://www.[todo].com/" target="_blank">[todo]</a> &amp;
-        <a href="https://www.[todo].com/" target="_blank">[todo]</a>.
+        <a href="https://www.facebook.com/siteselogoslowcost" target="_blank">Sites & Logos</a> &amp;
+        <a href="https://www.fitnessparatotos.com" target="_blank">Fitness para Totós</a>.
       </p>
       <p>
         I have immense love for minimalistic designs and web technologies. I enjoy working with
