Add pricing info

--- a/pricing.htm
+++ b/pricing.htm
@@ -2,106 +2,106 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-equiv="Cache-control" content="public">
-  <meta name="viewport"
-    content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <meta name="description"
-    content="Full Stack Engineer working for Primavera BSS and multiple side projects like Sites & Logos & Fitness para Totós.">
-  <title>Diogo Lewis Mesquita - Full Stack Engineer in Braga</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Cache-control" content="public">
+    <meta name="viewport"
+        content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description"
+        content="Full Stack Engineer working for Primavera BSS and multiple side projects like Sites & Logos & Fitness para Totós.">
+    <title>Diogo Lewis Mesquita - Full Stack Engineer in Braga</title>
 
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/pricing.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/pricing.css" rel="stylesheet">
 </head>
 
 <body>
-  <div id="wrap">
-    <div id="container">
-      <div class="row">
-        <div class="col-md-4 col-sm-6">
-          <div class="pricingTable">
-              <div class="pricingTable-header">
-                  <span class="heading">
-                      Standard
-                  </span>
-              </div>
-              <div class="pricing-plans">
-                  <span class="price-value"><i class="fa fa-usd"></i><span>10</span></span>
-                  <span class="subtitle">Lorem ipsum dolor</span>
-              </div>
-              <div class="pricingContent">
-                  <ul>
-                      <li><b>50GB</b> Disk Space</li>
-                      <li><b>50</b>Email Accounts</li>
-                      <li><b>50GB</b> Monthly Bandwidth</li>
-                      <li><b>10</b> subdomains</li>
-                      <li><b>15</b> Domains</li>
-                  </ul>
-              </div><!-- /  CONTENT BOX-->
+    <div id="wrap">
+        <div id="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="pricingTable">
+                        <div class="pricingTable-header">
+                            <span class="heading">
+                                Logo
+                            </span>
+                        </div>
+                        <div class="pricing-plans">
+                            <span class="price-value"><span>100</span>€</span>
+                            <span class="subtitle">Inclui</span>
+                        </div>
+                        <div class="pricingContent">
+                            <ul>
+                                <li><b>100</b> Cartões de visita</li>
+                                <li><b>2</b> Revisões</li>
+                                <li><b>3</b> Ficheiros <br>.eps, .png, .pdf</li>
+                                <li><b>+16€</b> p/ Revisão</li>
+                            </ul>
+                        </div><!-- /  CONTENT BOX-->
 
-              <div class="pricingTable-sign-up"><!-- BUTTON BOX-->
-                  <a href="#" class="btn btn-block btn-default">buy now</a>
-              </div><!-- BUTTON BOX-->
-          </div>
-      </div>
+                        <div class="pricingTable-sign-up">
+                            <!-- BUTTON BOX-->
+                            <a href="#" class="btn btn-block btn-default">Escolher</a>
+                        </div><!-- BUTTON BOX-->
+                    </div>
+                </div>
 
-      <div class="col-md-4 col-sm-6">
-          <div class="pricingTable">
-              <div class="pricingTable-header">
-                  <span class="heading">
-                     Business
-                  </span>
-              </div>
-              <div class="pricing-plans">
-                  <span class="price-value"><i class="fa fa-usd"></i><span>20</span></span>
-                  <span class="subtitle">Lorem ipsum dolor</span>
-              </div>
-              <div class="pricingContent">
-                  <ul>
-                      <li><b>70GB</b> Disk Space</li>
-                      <li><b>70</b>Email Accounts</li>
-                      <li><b>70GB</b> Monthly Bandwidth</li>
-                      <li><b>15</b> subdomains</li>
-                      <li><b>20</b> Domains</li>
-                  </ul>
-              </div><!-- /  CONTENT BOX-->
+                <div class="col-md-4 col-sm-6">
+                    <div class="pricingTable">
+                        <div class="pricingTable-header">
+                            <span class="heading">
+                                Website
+                            </span>
+                        </div>
+                        <div class="pricing-plans">
+                            <span class="price-value"><span>150</span>€</span>
+                            <span class="subtitle">Inclui</span>
+                        </div>
+                        <div class="pricingContent">
+                            <ul>
+                                <li><b>5</b> Páginas</li>
+                                <li><b>1</b> Formulário Contacto</li>
+                                <li><b>+16€</b> p/ Página</li>
+                                <li><b>X</b> Não inclui <br>domínio e alojamento</li>
+                            </ul>
+                        </div><!-- /  CONTENT BOX-->
 
-              <div class="pricingTable-sign-up"><!-- BUTTON BOX-->
-                  <a href="#" class="btn btn-block btn-default">buy now</a>
-              </div><!-- BUTTON BOX-->
-          </div>
-      </div>
+                        <div class="pricingTable-sign-up">
+                            <!-- BUTTON BOX-->
+                            <a href="#" class="btn btn-block btn-default">Escolher</a>
+                        </div><!-- BUTTON BOX-->
+                    </div>
+                </div>
 
-      <div class="col-md-4 col-sm-6">
-          <div class="pricingTable">
-              <div class="pricingTable-header">
-                  <span class="heading">
-                      Premium
-                  </span>
-              </div>
-              <div class="pricing-plans">
-                  <span class="price-value"><i class="fa fa-usd"></i><span>30</span></span>
-                  <span class="subtitle">Lorem ipsum dolor</span>
-              </div>
-              <div class="pricingContent">
-                  <ul>
-                      <li><b>80GB</b> Disk Space</li>
-                      <li><b>80</b>Email Accounts</li>
-                      <li><b>80GB</b> Monthly Bandwidth</li>
-                      <li><b>20</b> subdomains</li>
-                      <li><b>25</b> Domains</li>
-                  </ul>
-              </div><!-- /  CONTENT BOX-->
+                <div class="col-md-4 col-sm-6">
+                    <div class="pricingTable">
+                        <div class="pricingTable-header">
+                            <span class="heading">
+                                Website & Logo
+                            </span>
+                        </div>
+                        <div class="pricing-plans">
+                            <span class="price-value"><span>225</span>€</span>
+                            <span class="subtitle">Inclui</span>
+                        </div>
+                        <div class="pricingContent">
+                            <ul>
+                                <li><b>Tudo</b> em Logo</li>
+                                <li><b>Tudo</b> em Website</li>
+                                <li><b></b> <span class="text-white">null</span></li>
+                                <li><b>X</b> Não inclui <br>domínio e alojamento</li>
+                            </ul>
+                        </div><!-- /  CONTENT BOX-->
 
-              <div class="pricingTable-sign-up"><!-- BUTTON BOX-->
-                  <a href="#" class="btn btn-block btn-default">buy now</a>
-              </div><!-- BUTTON BOX-->
-          </div>
-      </div>
-      </div>
+                        <div class="pricingTable-sign-up">
+                            <!-- BUTTON BOX-->
+                            <a href="#" class="btn btn-block btn-default">Escolher</a>
+                        </div><!-- BUTTON BOX-->
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 </body>
 
